# src/routes/participant-routes.ts
@@ -1,0 +1,8 @@
+import * as express from "express";
+import { getParticipants } from "../controller/participant/get-participants";
+
+const router = express.Router();
+
+router.get('/', getParticipants);
+
+export default router;
