# src/routes/participants-routes.ts
@@ -1,9 +1,0 @@
-import * as express from 'express';
-import { getParticipants } from "../controller/get-participants";
-
-const router = express.Router();
-
-
-router.get('/', getParticipants);
-
-export default router;
